--- a/RangeenApp/package.json
+++ b/RangeenApp/package.json
@@ -5,7 +5,7 @@
     "main": "script.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --config webpack.config.js"
+        "build": "npx webpack --config webpack.config.js"
     },
     "keywords": [],
     "author": "",
