--- a/RangeenApp/package.json
+++ b/RangeenApp/package.json
@@ -5,7 +5,8 @@
     "main": "script.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npx webpack --config webpack.config.js"
+        "build": "npx webpack --config webpack.config.js",
+        "dev": "webpack serve --mode development --open"
     },
     "keywords": [],
     "author": "",
@@ -18,5 +19,8 @@
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4"
+    },
+    "dependencies": {
+        "chroma-js": "^3.0.0"
     }
 }
